# TuneFlow

./: .gitignore  NOTICE  README.md  design.md  environment.yml  pyproject.toml  requirements.txt
configs/data/: build_training.yaml  cleaning.yaml  split.yaml
configs/eval/: benchmark_fast.yaml  benchmark_formal.yaml
configs/tokenizer/: tokenizer.yaml
configs/train/: model_base.yaml  train_base_run.yaml  train_base_run_full.yaml  train_base_run_small.yaml  train_base_run_small_seq640.yaml
docs/: benchmark_metrics.md  eval_guide.md  todo.md  training_next_fim.md
scripts/: __init__.py
scripts/data/: __init__.py  build_data.py  build_training_data.py  clean_dataset.py  split_dataset.py  tokenize_dataset.py  validate_data_outputs.py
scripts/eval/: __init__.py  benchmark_runner.py  eval_all.py  eval_continuation.py  eval_infilling.py  export_benchmark_samples.py  export_tokens_to_midi.py  inspect_key_analysis.py
scripts/tools/: __init__.py  archive_run_artifacts.py
scripts/train/: __init__.py  regression_check.py  train_and_eval.py  train_base.py  train_base_from_config.py  train_lora.py
src/decoding/: __init__.py  grammar_fsm.py
src/inference/: __init__.py  generation.py
src/model/: __init__.py  configuration.py  modeling.py
src/music_analysis/: __init__.py  key_analysis.py  phrase_analysis.py
src/tokenizer/: __init__.py  common.py  midi_codec.py  tokenize_dataset.py  (+1 more)
tests/: test_absolute_benchmark_scoring.py  test_benchmarking.py  test_checkpoint_selection.py  test_music_analysis.py  test_tokenizer_midi_codec.py  test_training_metrics.py
(+14 files in other folders)
