[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tuneflow"
version = "0.1.0"
description = "TuneFlow symbolic MIDI data, training, and evaluation toolkit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.10.0",
  "mido>=1.3.3",
  "pandas>=2.3.0",
  "PyYAML>=6.0.3",
  "torch>=2.8.0",
  "torchaudio>=2.8.0",
  "torchvision>=0.23.0",
]

[project.scripts]
data-pipeline = "scripts.data.build_data:main"
data-clean = "scripts.data.clean_dataset:main"
data-split = "scripts.data.split_dataset:main"
data-tokenize = "scripts.data.tokenize_dataset:main"
data-build-training = "scripts.data.build_training_data:main"
data-validate = "scripts.data.validate_data_outputs:main"
train-base = "scripts.train.train_base_from_config:main"
train-base-raw = "scripts.train.train_base:main"
train-pipeline = "scripts.train.train_and_eval:main"
train-regression-check = "scripts.train.regression_check:main"
eval-all = "scripts.eval.eval_all:main"
eval-infilling = "scripts.eval.eval_infilling:main"
eval-continuation = "scripts.eval.eval_continuation:main"
eval-export-midi = "scripts.eval.export_tokens_to_midi:main"
eval-export-samples = "scripts.eval.export_benchmark_samples:main"
tools-archive = "scripts.tools.archive_run_artifacts:main"

[tool.setuptools.packages.find]
include = ["src*", "scripts*"]
